add reload after ajax call

--- a/templates/booking/list.html
+++ b/templates/booking/list.html
@@ -236,6 +236,7 @@
                     },
                 success: function (response) {
                     console.log(response);
+                    window.location.reload()
                 }
             });
         });
@@ -256,6 +257,7 @@
                     },
                 success: function (response) {
                     console.log(response);
+                    window.location.reload()
                 }
             });
         });
